HW6 optional 2.1-2.4 (except 2.3.1)